Fix direct-form-haku left alignment

--- a/resources/less/virkailija-application.less
+++ b/resources/less/virkailija-application.less
@@ -545,6 +545,10 @@ th.application__readonly-adjacent--header {
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.3);
 }
 
+.application__search-control-haku.application__search-control-direct-form-haku {
+  padding-left: 38px;
+}
+
 .application__search-control-hakukohde {
   padding: 10px 0;
   margin-left: 28px;
